# Scrappy-OS

./: .gitignore  LICENSE
WASMPLEASEUNZIPANDPUTIT/: Cargo.toml  decode.rs  interp.rs  lib.rs  runner.rs  types.rs  wasi.rs
scrapboot/: Cargo.toml
scrapboot/src/: lib.rs
scrapboot/wasm_bins/: emergency.wasm  init.wasm
scrappy-os/: Cargo.toml
scrappy-os/src/: lib.rs
